       add an \file{MD5} file (as done by CRAN): this is used by \code{R
	 CMD INSTALL} to check the integrity of the distribution.

       If this option is not specified, any existing (and probably
       stale) \file{MD5} file is removed.
     }
   }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \command{R CMD Rd2dvi} is now defunct: use \command{R CMD Rd2pdf}.

      \item Options such as \option{--max-nsize} and the function
      \code{mem.limits()} are now defunct.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is now disallowed.

      Use of an argument \code{chname} in \code{library.dynam()}
      including the extension \file{.so} or \file{.dll} (which was never
      allowed according to the help page) is defunct.  This also applies
      to \code{library.dynam.unload()} and to \code{useDynLib}
      directives in \file{NAMESPACE} files.

      \item The internal functions \code{.readRDS()} and
      \code{.saveRDS()} are now defunct.

      \item The off-line \code{help()} types \samp{"postscript"} and
      \samp{"ps"} are defunct.

      \item \code{Sys.putenv()}, replaced and deprecated in \R 2.5.0, is
      finally removed.

      \item Some functions/objects which have been defunct for five or
      more years have been removed completely.  These include
      \code{.Alias()}, \code{La.chol()}, \code{La.chol2inv()},
      \code{La.eigen()}, \code{Machine()}, \code{Platform()},
      \code{Version}, \code{codes()}, \code{delay()},
      \code{format.char()}, \code{getenv()}, \code{httpclient()},
      \code{loadURL()}, \code{machine()}, \code{parse.dcf()},
      \code{printNoClass()}, \code{provide()}, \code{read.table.url()},
      \code{restart()}, \code{scan.url()}, \code{symbol.C()},
      \code{symbol.For()} and \code{unix()}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building with a positive value of